welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: type mismatch;
 found   : java.awt.Color
 required: Int
			T(i)=getCouleurSol();
                                          ^Array1:5: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
		for (i <- 0 to x-1) {
                       ^